[package]
name = "pcsmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4.1"
sysinfo = "0.33.0"
hostname = "^0.4.0"
get_if_addrs = "0.5"
lazy_static = "1.4.0"
chrono = "0.4.37"
once_cell = "1.19.0"
